--- a/cocktails/src/app/cocktail-container/cocktail-edit/cocktail-edit.component.html
+++ b/cocktails/src/app/cocktail-container/cocktail-edit/cocktail-edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="cocktailFormGroup" (ngSubmit)="createCocktail()">
+<form *ngIf='cocktailFormGroup' [formGroup]="cocktailFormGroup" (ngSubmit)="createCocktail()">
     <div class="form-group">
         <label for="exampleInputName">Name</label>
         <input formControlName="name" type="text" class="form-control" id="exampleInputName" aria-describedby="nameHelp">
@@ -6,22 +6,32 @@
     </div>
     <div class="form-group">
         <label for="exampleInputImage">Image</label>
-        <input formControlName="img" type="text" class="form-control" placeholder="Lien Image" id="exampleInputImage">
+        <input formControlName="image" type="text" class="form-control" placeholder="Lien Image" id="exampleInputImage">
     </div>
     <div class="form-group">
         <label for="exampleInputDescription">Description</label>
-        <textarea formControlName="desc" type="text" class="form-control" id="exampleInputDescription"></textarea>
+        <textarea formControlName="description" type="text" class="form-control" id="exampleInputDescription"></textarea>
     </div>
-    <hr>
-        <button type="button" class="btn btn-success" (click)="addIngredient()">Ajouter un ingredient</button>
-    <hr>
-        <div formArrayName="ingredients">
+<!--    <hr>-->
+     <button *ngIf="cocktailFormGroup.get('ingredients') && cocktailFormGroup.get('ingredients').controls.size > 0" type="button" class="btn btn-success" (click)="addIngredient()">Ajouter un ingredient</button>
+<!--    <hr>-->
+        <div *ngIf="cocktailFormGroup.get('ingredients') && cocktailFormGroup.get('ingredients').controls" formArrayName="ingredients">
             <div [formGroup]="ingredient" class="form-group row" *ngFor="let ingredient of cocktailFormGroup.get('ingredients').controls">
                 <input placeholder="name" formControlName="name" class="col-8 form-control" type="text"/>
                 <input placeholder="quantity" formControlName="quantity" class="col-4 form-control" type="number"/>
             </div>
         </div>
     <hr>
-    <button [disabled]="cocktailFormGroup.invalid" type="submit" class="btn btn-primary">Sauvegarder</button>
-    <button type="reset" class="btn btn-secondary ml-2" [routerLink]="['../']">Annuler</button>
+
+    <div class="row">
+        <div class="col-xs-4 col-sm-2 col-md-2 ">
+            <button [disabled]="cocktailFormGroup.invalid" type="submit" class="btn btn-primary">Sauvegarder</button>
+        </div>
+        <div class="col-xs-4 col-sm-2 col-md-2 offset-md-1">
+            <button *ngIf="cocktailFormGroup.get('id').value > 0" (click)="deleteCocktail(cocktailFormGroup.get('id').value)" type="button" class="btn btn-danger ml-2">Supprimer</button>
+        </div>
+        <div class="col-xs-4 col-sm-2 col-md-2 offset-md-4">
+            <button type="reset" class="btn btn-secondary text-right" [routerLink]="['../']">Annuler</button>
+        </div>
+    </div>
 </form>
