--- a/cocktails/src/app/cocktail-container/cocktails-details/cocktails-details.component.html
+++ b/cocktails/src/app/cocktail-container/cocktails-details/cocktails-details.component.html
@@ -1,19 +1,18 @@
-<div class="row">
+<div *ngIf='cocktail' class="row">
     <div class="col-4">
         <img class="img-fluid"
         style="max-height: 150px;"
-        [src]="cocktail.img"
-        [alt]="cocktail.desc"/>
+        [src]="cocktail.image"
+        [alt]="cocktail.description"/>
     </div>
     <h3 col-8>
         {{ cocktail.name }}
     </h3>
 </div>
 <hr>
-<div class="row">
-    <p class="col-12">{{ cocktail.desc }}</p>
+<div *ngIf='cocktail' class="row">
+    <p class="col-12">{{ cocktail.description }}</p>
 </div>
-<hr>
 <div *ngIf='cocktail' class="row">
     <ul class="list-group col-12">
         <li class="list-group-item list-group-item-action d-flex" *ngFor="let ingredient of cocktail.ingredients">
