feat(openapi) add open api support

--- a/cocktails/src/app/header/header.component.html
+++ b/cocktails/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <a class="navbar-brand" routerLinkActive="active" routerLink="/">Cocktails</a>
+    <a class="navbar-brand" routerLinkActive="active" routerLink="/">Cocktails App</a>
     <button class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,3 +14,4 @@
         </ul>
     </div>
 </nav>
+<br>
