--- a/cocktails/src/app/cocktail-container/cocktails-list/cocktails-list.component.html
+++ b/cocktails/src/app/cocktail-container/cocktails-list/cocktails-list.component.html
@@ -5,6 +5,8 @@
 <div class="row">
     <div class="list group col-12"></div>
     <input type="text" class="form-control" [(ngModel)]="search">
+    <div class="container" [innerHTML]="banner$ | async">
+    </div>
     <a
         *ngFor="let cocktail of cocktails | filter:search ; let index = index"
         routerLinkActive="active"
